# GenSynthPop-Python

./: CITATION.cff  README.md  pyproject.toml
gensynthpop/: conditional_attribute_adder.py  household_grouper.py
gensynthpop/evaluation/: metrics.py  reporting.py  validation.py
gensynthpop/utils/: extractors.py
tests/: evaluation.py
